--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "2ano/2ano/1sem"]
 	path = 2ano/2ano/1sem
 	url = https://github.com/dium-li3/grupo-77.git
+[submodule "3ano/1sem/ProjetoLI4"]
+	path = 3ano/1sem/ProjetoLI4
+	url = https://github.com/filipasilva30/ProjetoLI4.git
