Update .gitignore, remove unnecessary files, and implement key logging functionality

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,22 @@
 node_modules/
 playwright/driver/
 *.parquet
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.tmp
+*.bak
+*.swp
+.DS_Store
+.idea/
+.vscode/
+*.iml
+*.sublime-project
+*.sublime-workspace
+*.env
+.env.*
+*.local
+.dist-newstyle/
+
